src/objects/OrgSpecificConfigurations__c.object
<CustomObject>
    <fields>
        <fullName>CheckDuplicate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Check Duplicate</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnableErrorLog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Error Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableLogs__c</fullName>
        <label>Enable Logs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Logs</fullName>
                </value>
                <value>
                    <fullName>Only Error Logs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnableMockForProfiles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter profile names separated with comma. If field is blank then mock is enabled for all profiles if Enable Mock field is checked</inlineHelpText>
        <label>Enable Mock For Profiles</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnableMock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Mock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndpointDomain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint Domain</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorReportingEmailIds__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter multiple email id&apos;s separated with comma</inlineHelpText>
        <label>Error Reporting Email Ids</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OverrideEnableMockForUsers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter two or more user names separated with comma</inlineHelpText>
        <label>Override Enable Mock For Users</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeText__c</fullName>
        <description>Source of truth for Record Type to be applied to the record. This field is a migratable version of Record Type that is used by ACET_OrgSpecificConfigsTrigger to update the actual records&apos; Record Type based on the value of this field.</description>
        <inlineHelpText>Source of truth for Record Type to be applied to the record. This field is a migratable version of Record Type that is used by ACET_OrgSpecificConfigsTrigger to update the actual records&apos; Record Type based on the value of this field.</inlineHelpText>
        <label>RecordTypeText</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ServiceAPI</fullName>
                </value>
                <value>
                    <fullName>TokenAPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendEmailOnError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if error email has to be sent on web service error</description>
        <label>Send Email On Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Static_Data__c</fullName>
        <description>This field will be used to store static map, that can be used to pass constant data to URL and request body</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Static Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WebserviceConfigurations__c</fullName>
        <label>Webservice Configurations</label>
        <referenceTo>WebserviceConfigurations__c</referenceTo>
        <relationshipLabel>Org Specific Configurations</relationshipLabel>
        <relationshipName>OrgSpecificConfigurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Org Specific Configurations</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Specific Configurations</pluralLabel>
    <recordTypes>
        <fullName>ServiceAPI</fullName>
        <active>true</active>
        <label>Service API</label>
    </recordTypes>
    <recordTypes>
        <fullName>TokenAPI</fullName>
        <active>true</active>
        <label>Token API</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>